[tool.poetry]
name = "taskw"
version = "2.0.0"
description = "Python bindings for your taskwarrior database"
authors = ["Ralph Bean"]

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.2"
pytz = "^2022.7"
kitchen = "^1.2.6"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
#pytest = "^7.1.3"
#flake8 = "^5.0.4"
#pylint = "^2.15.2"
#mypy = "=0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

